<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.outbrain.swinfra</groupId>
  <version>0.290-SNAPSHOT</version>
  <artifactId>ob1k</artifactId>
  <name>Ob1k - The RPC Framework</name>
  <packaging>pom</packaging>
  <url>http://www.outbrain.com</url>
  <description>
    Ob1k is an asynchronous light-weight RPC framework for rapid development of async, high performance micro services.
  </description>
  <licenses>
    <license>
      <name>Apache License Version 2.0, January 2004</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/outbrain/ob1k.git</connection>
    <developerConnection>scm:git:https://github.com/outbrain/ob1k.git</developerConnection>
    <url>https://github.com/outbrain/ob1k/</url>
    <tag>HEAD</tag>
  </scm>

  <organization>
    <name>outbrain</name>
    <url>http://www.outbrain.com</url>
  </organization>

  <developers>
    <developer>
      <name>Asy Ronen</name>
      <url>http://il.linkedin.com/in/asyronen</url>
      <email>aronen@outbrain.com</email>
    </developer>
    <developer>
      <name>Eran Harel</name>
      <url>http://il.linkedin.com/pub/eran-harel/4/4a3/234/</url>
      <email>eran@outbrain.com</email>
    </developer>
    <developer>
      <name>Michael Arenzon</name>
      <url>https://linkedin.com/in/arenzon</url>
      <email>marenzon@outbrain.com</email>
    </developer>
    <developer>
      <name>Douglas Chimento</name>
      <url>https://github.com/dougEfresh</url>
      <email>dchimento@outbrain.com</email>
    </developer>
    <developer>
      <name>Avi Youkhananov</name>
      <url>https://linkedin.com/in/avi-youkhananov-6b16b128</url>
      <email>ayoukhananov@outbrain.com</email>
    </developer>
    <developer>
      <name>Guy Kobrinsky</name>
      <url>https://linkedin.com/in/guykobrinsky</url>
      <email>gkobrinsky@outbrain.com</email>
    </developer>
  </developers>

  <repositories>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com/</url>
    </repository>
  </repositories>

  <modules>
    <module>util-metrics</module>
    <module>ob1k-concurrent</module>
    <module>ob1k-core</module>
    <module>ob1k-cache</module>
    <module>ob1k-db</module>
    <module>ob1k-cql</module>
    <module>ob1k-example</module>
    <module>ob1k-security</module>
    <module>ob1k-consul</module>
    <module>ob1k-http</module>
    <module>ob1k-swagger</module>
    <module>ob1k-spring</module>
    <module>ob1k-crud</module>
  </modules>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.compiler.source>1.8</java.compiler.source>
    <java.compiler.target>1.8</java.compiler.target>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <org.springframework.version>4.0.7.RELEASE</org.springframework.version>
    <metrics.version>2.1.2</metrics.version>
    <spring-ldap-core.version>2.0.3.RELEASE</spring-ldap-core.version>
    <findbugs-maven-plugin.version>3.0.3</findbugs-maven-plugin.version>
    <findbugs.skip>false</findbugs.skip>
    <kotlin.version>1.2.60</kotlin.version>
    <kotlin-logging.version>1.5.9</kotlin-logging.version>
    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
    <netty.version>4.0.56.Final</netty.version>
  </properties>

  <profiles>
    <profile>
      <id>JDK 8 Build</id>
      <activation>
        <jdk>[1.8,)</jdk>
      </activation>
      <properties>
        <!-- without this the build fails due to these self closing HTML elements which are not not allowed in Java 8 javadocs -->
        <additionalparam>-Xdoclint:none</additionalparam>
      </properties>
    </profile>
  </profiles>

  <distributionManagement>
    <repository>
      <id>Outbrain-Bintray</id>
      <url>https://api.bintray.com/maven/outbrain/OutbrainOSS/OB1K/</url>
    </repository>
  </distributionManagement>

  <build>
    <plugins>

      <plugin>
        <artifactId>kotlin-maven-plugin</artifactId>
        <groupId>org.jetbrains.kotlin</groupId>
        <version>${kotlin.version}</version>
        <executions>
          <execution>
            <id>compile</id>
            <goals> <goal>compile</goal> </goals>
            <configuration>
              <sourceDirs>
                <sourceDir>${project.basedir}/src/main/java</sourceDir>
              </sourceDirs>
            </configuration>
          </execution>
          <execution>
            <id>test-compile</id>
            <goals> <goal>test-compile</goal> </goals>
            <configuration>
              <sourceDirs>
                <sourceDir>${project.basedir}/src/test/java</sourceDir>
              </sourceDirs>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.1</version>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <executions>
          <!-- Replacing default-compile as it is treated specially by maven -->
          <execution>
            <id>default-compile</id>
            <phase>none</phase>
          </execution>
          <!-- Replacing default-testCompile as it is treated specially by maven -->
          <execution>
            <id>default-testCompile</id>
            <phase>none</phase>
          </execution>
          <execution>
            <id>java-compile</id>
            <phase>compile</phase>
            <goals> <goal>compile</goal> </goals>
          </execution>
          <execution>
            <id>java-test-compile</id>
            <phase>test-compile</phase>
            <goals> <goal>testCompile</goal> </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.17</version>
        <configuration>
          <useFile>false</useFile>
          <useSystemClassLoader>false</useSystemClassLoader>
          <forkMode>once</forkMode>
          <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=1024m</argLine>
        </configuration>
      </plugin>

      <!-- TODO reconfigure for OS projects -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.4</version>
        <configuration>
          <archive>
            <manifestEntries>
              <timestamp>${maven.build.timestamp}</timestamp>
            </manifestEntries>
          </archive>
        </configuration>

        <executions>
          <execution>
            <id>make-a-jar</id>
            <phase>compile</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>

        </executions>

      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.3</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>${findbugs-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>static-analysis-findbugs</id>
            <phase>test</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <skip>${findbugs.skip}</skip>
          <xmlOutput>true</xmlOutput>
          <effort>max</effort>
          <threshold>high</threshold>
          <excludeFilterFile>${project.parent.basedir}/findbugs-exclude.xml</excludeFilterFile>
          <onlyAnalyze>com.outbrain.-</onlyAnalyze>
          <findbugsXmlOutputDirectory>${project.build.directory}/reports/findbugs</findbugsXmlOutputDirectory>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-concurrent</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>util-metrics</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>util-metrics</artifactId>
        <scope>test</scope>
        <type>test-jar</type>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-security</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-cache</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-http</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-consul</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-swagger</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-spring</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>ob1k-db</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>2.8.5</version>
      </dependency>

      <dependency>
        <groupId>org.msgpack</groupId>
        <artifactId>msgpack</artifactId>
        <version>0.6.7</version>
      </dependency>

      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-all</artifactId>
        <version>${netty.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-core</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-beans</artifactId>
        <version>${org.springframework.version}</version>
      </dependency>

      <dependency>
        <groupId>org.springframework.ldap</groupId>
        <artifactId>spring-ldap-core</artifactId>
        <version>${spring-ldap-core.version}</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>16.0.1</version>
      </dependency>

      <dependency>
        <groupId>com.yammer.metrics</groupId>
        <artifactId>metrics-core</artifactId>
        <version>${metrics.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.1</version>
      </dependency>

      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time</artifactId>
        <version>2.2</version>
      </dependency>

      <dependency>
        <groupId>log4j</groupId>
        <artifactId>log4j</artifactId>
        <scope>provided</scope>
        <version>1.2.17</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.5</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-log4j12</artifactId>
        <version>1.7.5</version>
        <scope>provided</scope>
      </dependency>

      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-core</artifactId>
        <version>1.5.21</version>
      </dependency>

      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-models</artifactId>
        <version>1.5.21</version>
      </dependency>

      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger-ui</artifactId>
        <version>2.9.2</version>
      </dependency>

      <dependency>
        <groupId>net.jpountz.lz4</groupId>
        <artifactId>lz4</artifactId>
        <version>1.3.0</version>
      </dependency>

      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <scope>test</scope>
        <version>1.9.5</version>
      </dependency>

      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.11</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>io.github.microutils</groupId>
        <artifactId>kotlin-logging</artifactId>
        <version>${kotlin-logging.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-stdlib-jdk8</artifactId>
        <version>${kotlin.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-test</artifactId>
        <version>${kotlin.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.jetbrains.kotlin</groupId>
        <artifactId>kotlin-stdlib</artifactId>
        <version>${kotlin.version}</version>
      </dependency>

      <dependency>
        <groupId>org.skyscreamer</groupId>
        <artifactId>jsonassert</artifactId>
        <version>1.5.0</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>
</project>
